; ModuleID = '/home/carl/AnghaBench/mongoose/examples/ESP8266_RTOS/user/extr_mongoose.c_mg_mk_str.c'
source_filename = "/home/carl/AnghaBench/mongoose/examples/ESP8266_RTOS/user/extr_mongoose.c_mg_mk_str.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mg_str = type { i8*, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local { i8*, i64 } @mg_mk_str(i8* %0) #0 {
  %2 = alloca %struct.mg_str, align 8
  %3 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  %4 = getelementptr inbounds %struct.mg_str, %struct.mg_str* %2, i32 0, i32 0
  %5 = load i8*, i8** %3, align 8
  store i8* %5, i8** %4, align 8
  %6 = getelementptr inbounds %struct.mg_str, %struct.mg_str* %2, i32 0, i32 1
  store i32 0, i32* %6, align 8
  %7 = getelementptr inbounds %struct.mg_str, %struct.mg_str* %2, i32 0, i32 2
  store i32 0, i32* %7, align 4
  %8 = load i8*, i8** %3, align 8
  %9 = icmp ne i8* %8, null
  br i1 %9, label %10, label %14

10:                                               ; preds = %1
  %11 = load i8*, i8** %3, align 8
  %12 = call i32 @strlen(i8* %11)
  %13 = getelementptr inbounds %struct.mg_str, %struct.mg_str* %2, i32 0, i32 1
  store i32 %12, i32* %13, align 8
  br label %14

14:                                               ; preds = %10, %1
  %15 = bitcast %struct.mg_str* %2 to { i8*, i64 }*
  %16 = load { i8*, i64 }, { i8*, i64 }* %15, align 8
  ret { i8*, i64 } %16
}

declare dso_local i32 @strlen(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
